--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .main-container {
-    margin-top: 15vh;
+    margin-top: 100px;
     width: 100%;
     height: 70vh;
     display:flex;
