--- a/style.css
+++ b/style.css
@@ -2,37 +2,79 @@ body {
     margin: 30px;
 }
 
-.main-container {
-    margin-top: 100px;
-    width: 100%;
+.terms-main-container {
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 116px;
+    padding-bottom: 80px;
     height: 70vh;
-    display:flex;
+    display: flex;
     justify-content: space-between;
+    font-family: 'Open Sans', sans-serif
 }
 
 .contact_left {
-    max-height: 50vh;
+    max-height: 75vh;
     overflow: auto;
-    width: 40%;
+    width: 30%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
-.contact_left p,
+.contact_left p {
+    margin-left: 2em !important;
+}
+
+.contact_left h1 {
+    margin: 0 0 0 0.5em;
+    line-height: 80px;
+    color: black;
+    font-size: 30px;
+    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.contact_left .on-bilgilendirme {
+    margin-left: 1em;
+    cursor: pointer;
+    font-size: 18px;
+}
+
 .contact_left span {
-    line-height: 48px !important;
-    font-size: 17px !important;
+    line-height: 36px !important;
+    font-size: 18px !important;
     color: #717171 !important;
+    margin-bottom: 6.0pt;
+}
+
+a:link {
+    color: #355aa0;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+a:visited {
+    color: #355aa0;
+    text-decoration: none;
     cursor: pointer;
 }
 
 .contact_right {
-    max-height: 70vh;
+    padding: 20px;
+    max-height: 75vh;
     overflow: auto;
-    width: 60%;
+    width: 70%;
 }
 
-a:hover {
-    opacity: 60%;
+.contact_right * {
+    font-size: 1.05rem !important;
+    line-height: 26px !important;
+}
+
+.contact_right .G222Heading1 span {
+    font-size: 1.15rem !important;
+    font-family: 'Open Sans', sans-serif !important;
+    color: rgb(0, 0, 0) !important;
+    font-weight: 700 !important;
+    background-color: rgba(0, 0, 0, 0) !important;
 }
